--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
+    "mammoth": "^1.11.0",
     "next": "16.0.1",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "19.2.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -29,5 +32,8 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "canvas": "^3.2.0"
   }
 }
