--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "mammoth": "^1.11.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "pdf-parse": "^2.4.5",
     "react": "19.2.0",
     "react-calendar": "^6.0.0",
@@ -30,7 +30,7 @@
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
